# self-checksumming

./: .gitignore  CMakeLists.txt  README  README.md  modify.py  run-sc-eval.sh  run-self-checksum.sh
src/: CMakeLists.txt  acyclic_call_graph.cpp  acyclic_call_graph.h  acyclic_cfg.cpp  acyclic_cfg.h  basic_blocks_collector.cpp  basic_blocks_collector.h  checkers_network.cpp  checkers_network.h  definitions.h  hash_vector.cpp  hash_vector.h  logger.cpp  logger.h  self_checksum.cpp  self_checksum.h  simple_mutator.cpp  snippet_inserter.cpp  snippet_inserter.h  test.cpp
testing/: CMakeLists.txt  test.cpp
tests/: daniel_test  daniel_test.cpp  test  test.cpp
